--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,38 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    border: 0;
+    padding: 0;
     font-family: 'Ysabeau Office', sans-serif;
     
 }
 
 .content{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
     gap: 2rem;
 }
 .site-title {
     color: palevioletred;
     margin-bottom: 2rem;
+    background-color: pink;
+    text-align: center;
+    padding: 1rem;
+}
+
+.wrap {
+    padding: 2rem;
 }
 
 .image {
     display: block;
 }
 .content {
-    padding: 2rem;
-  
+    padding: 2rem; 
 }
 
-.content_ingredients {
-    grid-column: span 2;
+
+.content_instructions {
+    grid-row: span 3;
 }
 
 .button {
